@@ -1,13 +1,13 @@
 package nl.vpro.domain.subtitles;
 
-import java.util.*;
+import lombok.Getter;
+
+import java.util.Set;
 
 import javax.xml.bind.annotation.XmlEnum;
 import javax.xml.bind.annotation.XmlType;
 
 import nl.vpro.domain.Xmlns;
-
-import static java.util.Collections.unmodifiableSet;
 
 /**
  * @author Michiel Meeuwissen
@@ -21,44 +21,46 @@ public enum SubtitlesWorkflow {
      * Completely excluded from publishing/unpublishing logic. Not a real status, can can only be
      * attained by manually setting it in the database.
      */
-    IGNORE,
+    IGNORE(null),
 
     /**
      * Revoked because the media itself is not published, or is not playable
      */
-    REVOKED,
+    REVOKED(null),
 
 
-    /**
-     * Marked for deletion, but not yet processed
-     */
-    FOR_DELETION,
 
     /**
      * Marked deleted, and already revoked from API
      */
-    DELETED,
-
-
-    /**
-     * New subtitles, not yet processed for publication.
-     */
-    FOR_PUBLICATION,
+    DELETED(null),
 
      /**
-     * Changed subtitles, not yet processed for publication
+     * Marked for deletion, but not yet processed
      */
-    FOR_REPUBLICATION,
+    FOR_DELETION(DELETED),
 
     /**
      * The subtitles are published to the API
      */
-    PUBLISHED,
+    PUBLISHED(null),
+
+    /**
+     * New subtitles, not yet processed for publication.
+     */
+    FOR_PUBLICATION(PUBLISHED),
+
+     /**
+     * Changed subtitles, not yet processed for publication
+     */
+    FOR_REPUBLICATION(PUBLISHED),
+
+
 
     /**
      * Could not be published because of some error
      */
-    PUBLISH_ERROR,
+    PUBLISH_ERROR(null),
 
 
     /**
@@ -66,25 +68,45 @@ public enum SubtitlesWorkflow {
      * This is missed opportunity, but that's how it is.
      * @since 7.11
      */
-    MISSING
+    MISSING(null)
     ;
 
 
-    public static final  Set<SubtitlesWorkflow> NEEDS_WORK =
-        unmodifiableSet(new HashSet<>(
-            Arrays.asList(
-                FOR_DELETION,
-                FOR_PUBLICATION,
-                FOR_REPUBLICATION
-            ))
-        );
+    public static final  Set<SubtitlesWorkflow> NEEDS_WORK = Set.of(
+        FOR_DELETION,
+        FOR_PUBLICATION,
+        FOR_REPUBLICATION
+    );
 
-    public static final  Set<SubtitlesWorkflow> NOT_PUBLISHED = unmodifiableSet(new HashSet<>(Arrays.asList(FOR_DELETION, DELETED, REVOKED, FOR_PUBLICATION)));
+    public static final  Set<SubtitlesWorkflow> NOT_PUBLISHED = Set.of(
+        FOR_DELETION,
+        DELETED,
+        REVOKED,
+        FOR_PUBLICATION,
+        FOR_REPUBLICATION
+    );
 
-    public static final  Set<SubtitlesWorkflow> DELETEDS = unmodifiableSet(new HashSet<>(Arrays.asList(FOR_DELETION, DELETED)));
+    public static final Set<SubtitlesWorkflow> IN_API = Set.of(
+        PUBLISHED,
+        MISSING
+    );
 
-    public static final Set<SubtitlesWorkflow> INVISIBLE = DELETEDS;
+    public static final  Set<SubtitlesWorkflow> DELETEDS = Set.of(
+        FOR_DELETION,
+        DELETED
+    );
+
+    public static final Set<SubtitlesWorkflow> INVISIBLE = Set.of(
+        FOR_DELETION,
+        DELETED,
+        IGNORE
+    );
 
 
+    @Getter
+    private final SubtitlesWorkflow dest;
 
+    SubtitlesWorkflow(SubtitlesWorkflow dest) {
+        this.dest = dest;
+    }
 }
